--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^5.15.10",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
     "yup": "^1.3.3"
