--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@react-google-maps/api": "^2.20.7",
     "axios": "^1.6.7",
+    "firebase": "^12.0.0",
     "formik": "^2.4.5",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
