--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "axios": "^1.6.7",
     "firebase": "^12.0.0",
     "formik": "^2.4.5",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.6.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
